Feature: second DNN

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-03 17:09:22.010687: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2023-04-03 18:59:19.593298: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -266,16 +266,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster 0: ['of', 'are', 'other', 'also', 'by', 'there', 'movement', 'comes', 'either', 'plus']\n",
-      "Cluster 1: ['i', 'one', 'watches', 'me', 'price', 'they', 'what', 'amazon', 'battery', 'he']\n",
-      "Cluster 2: ['time', 'day', 'light', 'date', 'second', 'set', 'hand', 'works', 'hands', 'alarm']\n",
-      "Cluster 3: ['the', 'that', 'band', 'which', 'face', 'wrist', 'little', 'small', 'strap', 'case']\n",
-      "Cluster 4: ['about', 'after', 'now', 'two', 'over', '2', '5', 'few', '3', 'many']\n",
-      "Cluster 5: ['to', 'in', 'on', 'or', 'can', 'when', 'will', 'out', 'up', 'don']\n",
-      "Cluster 6: ['it', 'a', 'and', 'watch', 'is', 'this', 'but', 'not', 's', 'very']\n",
-      "Cluster 7: ['for', 'my', 'with', 'at', 'has', 'just', 'would', 'only', 'an', 'from']\n",
-      "Cluster 8: ['was', 'had', 'bought', 'years', 'am', 'm', 'been', 'got', 'year', 'did']\n",
-      "Cluster 9: ['have', 'you', 't', 'so', 'be', 'if', 'get', 'wear', 'use', 'do']\n"
+      "Cluster 0: ['and', 'for', 'of', 'in', 'with', 'on', 'at', 'has', 'are', 'an']\n",
+      "Cluster 1: ['can', 'would', 'will', 'don', 'does', 'could', 'did', 'doesn', 'should', 'didn']\n",
+      "Cluster 2: ['about', 'after', 'two', 'over', '2', '5', 'few', '3', 'many', '1']\n",
+      "Cluster 3: ['from', 'they', 'them', 'casio', 'seiko', 'these', 'invicta', 'less', 'their', 'service']\n",
+      "Cluster 4: ['the', 'band', 'than', 'which', 'face', 'also', 'light', 'little', 'there', 'small']\n",
+      "Cluster 5: ['to', 'have', 'you', 't', 'so', 'be', 'if', 'or', 'just', 'when']\n",
+      "Cluster 6: ['great', 'like', 'good', 'nice', 'well', 'easy', 'perfect', 'better', 'beautiful', 'happy']\n",
+      "Cluster 7: ['it', 'a', 'watch', 'is', 'this', 'that', 'but', 'not', 's', 'very']\n",
+      "Cluster 8: ['time', 'only', 'day', 'use', 'battery', 'date', 'second', 'set', 'every', 'hand']\n",
+      "Cluster 9: ['i', 'my', 'was', 'one', 'had', 'me', 'bought', 'years', 'am', 'amazon']\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "2d8c0e48",
    "metadata": {},
    "outputs": [
@@ -388,147 +388,81 @@
      "text": [
       "['00' '000' '0000' ... 'zwitzerland' 'zxc' 'zzzffth']\n",
       "(47849, 42034)\n",
-      "(array([[-3.32631258, -5.55271238,  6.2775308 , ..., -3.17747712,\n",
-      "         3.44877042,  0.79644831],\n",
-      "       [-1.56142309, -2.41208483,  0.74176592, ..., -2.47067718,\n",
-      "         4.29040974, -1.76196027],\n",
-      "       [-0.92613569, -0.83615992,  0.4014748 , ..., -2.79122744,\n",
-      "         1.91431209, -0.40916161],\n",
-      "       ...,\n",
-      "       [-3.59392226, -1.50934326, -0.62641591, ..., -1.41303362,\n",
-      "         3.55613283, -2.80613489],\n",
-      "       [-1.00321532,  1.29455152, -1.93577537, ..., -0.96494052,\n",
-      "         3.07945238, -0.94415659],\n",
-      "       [-0.05796631, -1.27661649,  0.1559143 , ...,  0.02298158,\n",
-      "        -0.08620405,  0.49668088]]), array([[0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 1., 0., 0., 0.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [1., 0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 1., 0., 0., 0.],\n",
-      "       [1., 0., 0., 0., 0.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 1., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 1., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 0., 1.],\n",
-      "       [0., 0., 0., 1., 0.],\n",
-      "       [0., 0., 0., 0., 1.]]))\n"
+      "(128, 400)\n",
+      "Epoch 1/3\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-03 18:59:53.925162: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-04-03 18:59:54.889011: I tensorflow/compiler/xla/service/service.cc:173] XLA service 0x559ad84cad10 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-04-03 18:59:54.889056: I tensorflow/compiler/xla/service/service.cc:181]   StreamExecutor device (0): NVIDIA GeForce RTX 3070, Compute Capability 8.6\n",
+      "2023-04-03 18:59:55.014443: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:55.015522: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:234] Falling back to the CUDA driver for PTX compilation; ptxas does not support CC 8.6\n",
+      "2023-04-03 18:59:55.015549: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:237] Used ptxas at ptxas\n",
+      "2023-04-03 18:59:55.015587: W tensorflow/compiler/xla/service/gpu/nvptx_compiler.cc:281] Couldn't read CUDA driver version.\n",
+      "2023-04-03 18:59:55.015722: I tensorflow/compiler/jit/xla_compilation_cache.cc:477] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n",
+      "2023-04-03 18:59:55.164260: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:55.356740: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:55.463027: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  1/374 [..............................] - ETA: 13:09 - loss: 2.2876 - accuracy: 0.2109"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-03 18:59:55.923056: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:55.964230: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:56.007570: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-03 18:59:56.053317: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "374/374 [==============================] - 117s 308ms/step - loss: 0.4394 - accuracy: 0.5810\n",
+      "Epoch 2/3\n",
+      "374/374 [==============================] - 110s 296ms/step - loss: 0.3590 - accuracy: 0.6157\n",
+      "Epoch 3/3\n",
+      "374/374 [==============================] - 105s 280ms/step - loss: 0.3479 - accuracy: 0.6211\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb32afa1300>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -582,21 +516,31 @@
     "            for word in review:\n",
     "                # the word must be inside the Tfid & word2vec\n",
     "                if not word in self._word_to_index: continue\n",
-    "                if not word in word2vec_model.wv: continue\n",
+    "                if not word in self._vectorizer.wv: continue\n",
     "\n",
-    "                r[review_index,:] += self._tfid[BoW_train_index, self._word_to_index[word]]*word2vec_model.wv[word]\n",
+    "                r[review_index,:] += self._tfid[BoW_train_index, self._word_to_index[word]]*self._vectorizer.wv[word]\n",
     "            y[review_index,y_reviews_slice[review_index]-1] = 1 # the index is from 1 to 5\n",
     "\n",
     "        return (r,y)\n",
     "    \n",
     "training_generator = TfidDataGenerator(SaHandler, word2vec_model, count_vectorizer, BoW_train, BATCH_SIZE)\n",
-    "print(str(training_generator.__getitem__(0)))"
+    "print(str(training_generator.__getitem__(0)[0].shape)) # now we just have a BATCH_SIZE x WORD2VEC_VECTOR_SIZE input\n",
+    "\n",
+    "# -- building the DNN --\n",
+    "model = Sequential()\n",
+    "for hidden_dense in DENSE_HIDDEN_DIM:\n",
+    "    model.add(Dense(hidden_dense))\n",
+    "model.add(Dense(5, activation='softmax'))\n",
+    "#model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "model.fit(training_generator, epochs=EPOCHS, batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2b426e",
+   "id": "247ea89e",
    "metadata": {
     "scrolled": true
    },
