--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-03 18:59:19.593298: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2023-04-17 13:34:17.036624: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -266,16 +266,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster 0: ['and', 'for', 'of', 'in', 'with', 'on', 'at', 'has', 'are', 'an']\n",
-      "Cluster 1: ['can', 'would', 'will', 'don', 'does', 'could', 'did', 'doesn', 'should', 'didn']\n",
-      "Cluster 2: ['about', 'after', 'two', 'over', '2', '5', 'few', '3', 'many', '1']\n",
-      "Cluster 3: ['from', 'they', 'them', 'casio', 'seiko', 'these', 'invicta', 'less', 'their', 'service']\n",
-      "Cluster 4: ['the', 'band', 'than', 'which', 'face', 'also', 'light', 'little', 'there', 'small']\n",
-      "Cluster 5: ['to', 'have', 'you', 't', 'so', 'be', 'if', 'or', 'just', 'when']\n",
-      "Cluster 6: ['great', 'like', 'good', 'nice', 'well', 'easy', 'perfect', 'better', 'beautiful', 'happy']\n",
-      "Cluster 7: ['it', 'a', 'watch', 'is', 'this', 'that', 'but', 'not', 's', 'very']\n",
-      "Cluster 8: ['time', 'only', 'day', 'use', 'battery', 'date', 'second', 'set', 'every', 'hand']\n",
-      "Cluster 9: ['i', 'my', 'was', 'one', 'had', 'me', 'bought', 'years', 'am', 'amazon']\n"
+      "Cluster 0: ['for', 'of', 'in', 'my', 'with', 'at', 'has', 'are', 'would', 'will']\n",
+      "Cluster 1: ['the', 'to', 'on', 'or', 'just', 'when', 'out', 'up', 'off', 'even']\n",
+      "Cluster 2: ['this', 'that', 'as', 'one', 'watches', 'all', 'an', 'more', 'other', 've']\n",
+      "Cluster 3: ['years', 'year', 'months', 'days', 'times', 'month', 'week', 'seconds', 'minutes', 'weeks']\n",
+      "Cluster 4: ['have', 'you', 't', 'so', 'be', 'if', 'get', 'wear', 'use', 'do']\n",
+      "Cluster 5: ['it', 'a', 'and', 'watch', 'is', 'but', 'not', 's', 'very', 'great']\n",
+      "Cluster 6: ['o', 'y', 'de', 'el', 'e', 'la', 'que', 'es', 'feet', 'muy']\n",
+      "Cluster 7: ['about', 'after', 'now', 'two', 'over', '2', '5', 'few', '3', 'every']\n",
+      "Cluster 8: ['time', 'can', 'only', 'which', 'day', 'date', 'second', 'set', 'hand', 'works']\n",
+      "Cluster 9: ['i', 'was', 'had', 'me', 'price', 'they', 'bought', 'what', 'am', 'amazon']\n"
      ]
     }
    ],
@@ -380,7 +380,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "2d8c0e48",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,33 +390,17 @@
      "text": [
       "['00' '000' '0000' ... 'zwitzerland' 'zxc' 'zzzffth']\n",
       "(47849, 42034)\n",
-      "(128, 400)\n",
-      "Epoch 1/3\n"
+      "(128, 300)\n",
+      "Epoch 1/30\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-03 18:59:53.925162: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
-      "2023-04-03 18:59:54.889011: I tensorflow/compiler/xla/service/service.cc:173] XLA service 0x559ad84cad10 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "2023-04-03 18:59:54.889056: I tensorflow/compiler/xla/service/service.cc:181]   StreamExecutor device (0): NVIDIA GeForce RTX 3070, Compute Capability 8.6\n",
-      "2023-04-03 18:59:55.014443: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:55.015522: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:234] Falling back to the CUDA driver for PTX compilation; ptxas does not support CC 8.6\n",
-      "2023-04-03 18:59:55.015549: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:237] Used ptxas at ptxas\n",
-      "2023-04-03 18:59:55.015587: W tensorflow/compiler/xla/service/gpu/nvptx_compiler.cc:281] Couldn't read CUDA driver version.\n",
-      "2023-04-03 18:59:55.015722: I tensorflow/compiler/jit/xla_compilation_cache.cc:477] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n",
-      "2023-04-03 18:59:55.164260: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:55.356740: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:55.463027: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
+      "2023-04-17 13:34:58.257461: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-04-17 13:34:58.835455: I tensorflow/compiler/xla/service/service.cc:173] XLA service 0x55db4e1e68d0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-04-17 13:34:58.835509: I tensorflow/compiler/xla/service/service.cc:181]   StreamExecutor device (0): NVIDIA GeForce RTX 3070, Compute Capability 8.6\n"
      ]
     },
     {
@@ -422,23 +408,33 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  1/374 [..............................] - ETA: 13:09 - loss: 2.2876 - accuracy: 0.2109"
+      "  1/374 [..............................] - ETA: 6:28 - loss: 2.3310 - accuracy: 0.2344"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-03 18:59:55.923056: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "2023-04-17 13:34:59.169024: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
       "\n",
       "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:55.964230: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "2023-04-17 13:34:59.170078: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:234] Falling back to the CUDA driver for PTX compilation; ptxas does not support CC 8.6\n",
+      "2023-04-17 13:34:59.170087: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:237] Used ptxas at ptxas\n",
+      "2023-04-17 13:34:59.170125: W tensorflow/compiler/xla/service/gpu/nvptx_compiler.cc:281] Couldn't read CUDA driver version.\n",
+      "2023-04-17 13:34:59.170314: I tensorflow/compiler/jit/xla_compilation_cache.cc:477] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n",
+      "2023-04-17 13:34:59.302242: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
       "\n",
       "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:56.007570: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "2023-04-17 13:34:59.313172: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
       "\n",
       "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-04-03 18:59:56.053317: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "2023-04-17 13:34:59.327870: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-17 13:34:59.340441: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-04-17 13:34:59.352447: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
       "\n",
       "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
      ]
@@ -447,17 +443,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "374/374 [==============================] - 117s 308ms/step - loss: 0.4394 - accuracy: 0.5810\n",
-      "Epoch 2/3\n",
-      "374/374 [==============================] - 110s 296ms/step - loss: 0.3590 - accuracy: 0.6157\n",
-      "Epoch 3/3\n",
-      "374/374 [==============================] - 105s 280ms/step - loss: 0.3479 - accuracy: 0.6211\n"
+      "374/374 [==============================] - 106s 282ms/step - loss: 0.4556 - accuracy: 0.5694\n",
+      "Epoch 2/30\n",
+      "374/374 [==============================] - 106s 284ms/step - loss: 0.3714 - accuracy: 0.6088\n",
+      "Epoch 3/30\n",
+      "374/374 [==============================] - 109s 291ms/step - loss: 0.3548 - accuracy: 0.6178\n",
+      "Epoch 4/30\n",
+      "374/374 [==============================] - 106s 282ms/step - loss: 0.3487 - accuracy: 0.6194\n",
+      "Epoch 5/30\n",
+      "374/374 [==============================] - 111s 297ms/step - loss: 0.3440 - accuracy: 0.6227\n",
+      "Epoch 6/30\n",
+      "374/374 [==============================] - 105s 282ms/step - loss: 0.3398 - accuracy: 0.6249\n",
+      "Epoch 7/30\n",
+      "374/374 [==============================] - 109s 292ms/step - loss: 0.3370 - accuracy: 0.6239\n",
+      "Epoch 8/30\n",
+      "374/374 [==============================] - 104s 279ms/step - loss: 0.3349 - accuracy: 0.6280\n",
+      "Epoch 9/30\n",
+      "374/374 [==============================] - 109s 292ms/step - loss: 0.3339 - accuracy: 0.6275\n",
+      "Epoch 10/30\n",
+      "374/374 [==============================] - 104s 277ms/step - loss: 0.3334 - accuracy: 0.6278\n",
+      "Epoch 11/30\n",
+      "374/374 [==============================] - 106s 283ms/step - loss: 0.3315 - accuracy: 0.6282\n",
+      "Epoch 12/30\n",
+      "374/374 [==============================] - 103s 274ms/step - loss: 0.3296 - accuracy: 0.6304\n",
+      "Epoch 13/30\n",
+      "374/374 [==============================] - 104s 279ms/step - loss: 0.3293 - accuracy: 0.6292\n",
+      "Epoch 14/30\n",
+      "374/374 [==============================] - 93s 249ms/step - loss: 0.3303 - accuracy: 0.6283\n",
+      "Epoch 15/30\n",
+      "374/374 [==============================] - 100s 269ms/step - loss: 0.3295 - accuracy: 0.6300\n",
+      "Epoch 16/30\n",
+      "374/374 [==============================] - 113s 302ms/step - loss: 0.3275 - accuracy: 0.6314\n",
+      "Epoch 17/30\n",
+      "374/374 [==============================] - 110s 295ms/step - loss: 0.3274 - accuracy: 0.6305\n",
+      "Epoch 18/30\n",
+      "374/374 [==============================] - 107s 287ms/step - loss: 0.3275 - accuracy: 0.6307\n",
+      "Epoch 19/30\n",
+      "374/374 [==============================] - 106s 283ms/step - loss: 0.3254 - accuracy: 0.6324\n",
+      "Epoch 20/30\n",
+      "374/374 [==============================] - 106s 283ms/step - loss: 0.3264 - accuracy: 0.6321\n",
+      "Epoch 21/30\n",
+      "374/374 [==============================] - 114s 305ms/step - loss: 0.3254 - accuracy: 0.6313\n",
+      "Epoch 22/30\n",
+      "374/374 [==============================] - 108s 288ms/step - loss: 0.3246 - accuracy: 0.6317\n",
+      "Epoch 23/30\n",
+      "374/374 [==============================] - 113s 303ms/step - loss: 0.3262 - accuracy: 0.6314\n",
+      "Epoch 24/30\n",
+      "374/374 [==============================] - 109s 292ms/step - loss: 0.3242 - accuracy: 0.6317\n",
+      "Epoch 25/30\n",
+      "374/374 [==============================] - 110s 293ms/step - loss: 0.3251 - accuracy: 0.6313\n",
+      "Epoch 26/30\n",
+      "374/374 [==============================] - 109s 293ms/step - loss: 0.3235 - accuracy: 0.6323\n",
+      "Epoch 27/30\n",
+      "374/374 [==============================] - 112s 300ms/step - loss: 0.3233 - accuracy: 0.6317\n",
+      "Epoch 28/30\n",
+      "374/374 [==============================] - 106s 285ms/step - loss: 0.3231 - accuracy: 0.6320\n",
+      "Epoch 29/30\n",
+      "374/374 [==============================] - 109s 293ms/step - loss: 0.3245 - accuracy: 0.6313\n",
+      "Epoch 30/30\n",
+      "374/374 [==============================] - 107s 287ms/step - loss: 0.3235 - accuracy: 0.6326\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb32afa1300>"
+       "<keras.callbacks.History at 0x7f8f00f37100>"
       ]
      },
      "execution_count": 8,
@@ -536,16 +586,6 @@
     "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "model.fit(training_generator, epochs=EPOCHS, batch_size=BATCH_SIZE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "247ea89e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
